--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><a href ="index.html">Home</a></li>
+        <li><a href ="headings.html">Heading Demo</li>
+        <li><a href ="textdemo.html">Text Demo</li>
+        <li><a href ="unorderedlist.html">unordered list demo</li>
+        <li><a href ="numberedlist.html">ordered list demo</li>
+        <li><a href ="tableDemo1.html">Table demo 1</li>
+        <li><a href ="tableDemo2.html">Table demo 2 - pets</li>
+      </ul>
+    </nav>
+
     <p>Welcome to my web site!</p>
   </body>
 </html>
