--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <nav>
       <ul>
         <li><a href ="index.html">Home</a></li>
-        <li><a href ="headings.html">Heading Demo</li>
-        <li><a href ="textdemo.html">Text Demo</li>
-        <li><a href ="unorderedlist.html">unordered list demo</li>
-        <li><a href ="numberedlist.html">ordered list demo</li>
-        <li><a href ="tableDemo1.html">Table demo 1</li>
-        <li><a href ="tableDemo2.html">Table demo 2 - pets</li>
+        <li><a href ="headings.html">Heading Demo</a></li>
+        <li><a href ="textdemo.html">Text Demo</a></li>
+        <li><a href ="unorderedlist.html">unordered list demo</a></li>
+        <li><a href ="numberedlist.html">ordered list demo</a></li>
+        <li><a href ="tableDemo1.html">Table demo 1</a></li>
+        <li><a href ="tableDemo2.html">Table demo 2 - pets</a></li>
       </ul>
     </nav>
 
